--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,13 @@
 
 # Core monitoring and notification
 plyer>=2.0.0                    # Cross-platform notifications
-python-dotenv>=0.19.0           # Environment variable management
-rich>=10.0.0                    # Rich console output and formatting
+python-dotenv>=0.19.0           # Environment variable management for sensitive data
 
 # Windows system monitoring dependencies
 psutil>=5.8.0                   # Windows system and process monitoring
 
 # File monitoring and processing
-watchdog>=2.1.0                 # File system monitoring
-colorama>=0.4.4                 # Windows console color support
+watchdog>=2.1.0                 # File system monitoring and folder watching
 
 # Email and communication
 # Note: smtplib is built-in to Python, no external package needed
