updated workflow dispatch
updated workflow dispatch

--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -10,8 +10,8 @@ on:
 
 jobs:
   build:
-    # Only run on merge to main (when PR is merged)
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    # Run on push, merged PRs, or manual workflow dispatch
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true) || github.event_name == 'workflow_dispatch'
     
     runs-on: windows-latest
     
